<resources>
    <!-- Application -->
    <string name="gs_app_name">Guardasaude</string>
    <string name="gs_app_name_login">guarda saúde</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="authenticating_message">Authenticating&#8230;</string>
    <string name="exams">Exams</string>
    <string name="filter">Filter</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="login_success">Success</string>
    <string name="login_failed">Login unsuccessful</string>
    <string name="login_manager">Manager Identified!</string>
    <string name="choose_domain">Choose domain</string>
    <string name="find">Find</string>
    <string name="cancel">Cancel</string>
    <string name="find_new_exam">Find new exam</string>
    <string name="protocol">Protocol</string>
    <string name="Information">Information</string>
    <string name="Report">Report</string>
    <string name="Images">Images</string>
    <string name="Close">Close</string>
    <string name="search">Search</string>
    <string name="menu_search">Search menu</string>
    <string name="search_hint">search hint</string>
    <string name="exam_literal">EXAM</string>
    <string name="comments">Comments</string>
    <string name="Image_Overview">IMAGE OVERVIEW</string>
    <string name="show_comments">SHOW COMMENTS</string>
    <string name="server_error">Server Error. Try again or contact gs</string>
    <string name="choose_role">Choose Role</string>
    <string name="empty_creds">Username and password cannot be empty</string>
    <string name="ExamStatus">Exam Status</string>
    <string name="SortBy">Sort By</string>
    <string name="sort">Sort</string>
    <string name="sortexams">Sort Exams</string>
    <string name="exam_type">Exam Type</string>
    <string name="exam_id">Exam Id</string>
    <string name="exam_clinic">Exam Clinic</string>
    <string name="exam_patient">Exam Patient</string>
    <string name="date_literal">23/04/2016 12:10</string>
    <string name="exam_reporting_phys">Reporting Physician</string>
    <string name="information">Information</string>
    <string name="comment_example">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</string>
    <string name="information_error">NOT FOUND</string>
    <string name="information_error_response">Try again or contact an administrator</string>
    <string name="patient">Patient</string>
    <string name="report">Report</string>
    <string name="reporting">Reporting Physician</string>
    <string name="referring">Referring Physician</string>
    <string name="executionDate">Execution Date</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="identification">Identification</string>
    <string name="test_wrong_password">wrongpassword</string>
    <string name="test_multi_role_password">admin</string>
    <string name="test_multi_role_user">doctor</string>
    <string name="test_wrong_user">wronguser</string>
    <string name="test_single_role_user">doctor2</string>
    <string name="test_single_role_password">Admin1</string>
    <string name="gs_role_option_pro">Professional</string>
    <string name="ready_char">R</string>
    <string name="ready">Ready</string>
    <string name="available">Available</string>
    <string name="finished_char">F</string>
    <string name="finished">Finished</string>
    <string name="exam_overview_failed">Failed to load exams…</string>
    <string name="noImages">No images available…</string>
    <string name="auth_failed">Wrong password or username entered</string>
    <string name="logout">Logout</string>
    <string name="examIdentification">Exam Identification</string>
    <string name="accessCode">Access Code</string>
    <string name="gs_exam_write_comment_hint">Start writing a comment &#8230;</string>
    <string name="clinic">Clinic</string>
    <string name="sort_icon">Sort Icon</string>
    <string name="forgot_pwd">Forgot your password?</string>
    <string name="write_email_below">Write your email below and click submit.</string>
    <string name="email_notification_msg">An email will be sent to your inbox to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="write_email_here">Email address</string>
    <string name="snackReqPwd">Email sent. Check your inbox for further instructions.</string>
    <string name="snackNoReqPwd">Email not sent. Something went wrong. Try again </string>
    <string name="anonymous_exam">No account?\nDirectly access an exam</string>
    <string name="Enter_email">Email *</string>
    <string name="Enter_password">Password *</string>
    <string name="Re_enter_password">Verify your password *</string>
    <string name="account_info">Account Information</string>
    <string name="personal_info">Personal Information</string>
    <string name="first_name">First name *</string>
    <string name="last_name">Last name *</string>
    <string name="password_info">Your password has to be at least 5 characters long and include at least 1 number, upprcase letter and lowercase letter (e.g: Abcd1)</string>
    <string name="gender">Gender</string>
    <string name="female_abbr">F</string>
    <string name="male_abbr">M</string>
    <string name="female">Woman</string>
    <string name="male">Man</string>
    <string name="city">City *</string>
    <string name="language">Language *</string>
    <string name="birth_date">Select your date of birth *</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="id_type">Type of Identification *</string>
    <string name="personal_id">Identification No *</string>
    <string name="password_verify_info">Both passwords have to be the same.</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="must_befilled_in">Make sure all fields are filled in.</string>
    <string name="invalid_entry">is not a valid entry.\\nCheck for mistakes and try again please..</string>
    <string name="country">Country *</string>
    <string name="brazil">Brazil</string>
    <string name="other">Other</string>


    <!--Arrays -->
    <string-array name="genders">
        <item>@string/male</item>
        <item>@string/female</item>
    </string-array>

    <string-array name="countries">
        <item>@string/brazil</item>
        <item>@string/other</item>
    </string-array>

    <string-array name="languages">
        <item>Português</item>
        <item>Español</item>
        <item>English</item>
    </string-array>

    <string-array name="id_types">
        <item>CPF</item>
        <item>Passport</item>
        <item>ID</item>
        <item>ExternalSystem</item>
        <item>Professional</item>
        <item>ClinicInternalID</item>
    </string-array>
    <string name="createAccount">Create an account</string>
    <string name="moreInfo">To get more information</string>
    <string name="exam_associated_succesful">Exam successfully associated</string>
    <string name="exam_already_associated">Exam already associated</string>
    <string name="exam_associated_fail">Exam not found or Wrong accesscode</string>
    <string name="exam_associated_internalfail">Exam not found</string>
    <string name="identification_required">Identification is required!</string>
    <string name="accesscode_required">Access code is required!</string>
    <string name="id_and_ac_required">Identification and access code are required!</string>
    <string name="test_add_exam_id">GKS0004</string>
    <string name="test_add_exam_accesscode">01012001</string>
    <string name="test_add_exam_accesscode_wrong">01012002</string>
    <string name="associate">Associate Exam</string>
    <string name="exam_referring_phys">Referring physician</string>
    <string name="download_documents">Documents</string>
    <string name="patient_role">ROLE_PATIENT</string>
    <string name="pdf">Pdf icon</string>
    <string name="no_report">No report was found for this exam.</string>
    <string name="snackDocNotFound">Document not found!</string>
    <string name="noPdfReaderDialogTitle">No Pdf Reader</string>
    <string name="noPdfReaderDialogText">Could not find pdf reader to open document. Please install a pdf reader application!</string>
    <string name="opening">Opening..</string>
    <string name="loading">Loading</string>
    <string name="in_progress">In progress</string>
    <string name="register_failed">Failed to register</string>
    <string name="register_success">Registration Success!</string>
    <string name="future_login">You now can login with your user details.</string>
    <string name="comment_failed">Something went wrong posting the comment</string>
    <string name="comment_empty">You can\'t post empty comments.</string>
    <string name="emergencyExams">Emergency Exams</string>
    <string name="writing">Writing</string>
    <string name="waiting_rev">Waiting Review</string>
    <string name="rev_rejected">Review Rejected</string>
    <string name="delivered">Delivered</string>
    <string name="blank">Blank</string>
    <string name="unknown">Unknown</string>
    <string name="test_forgot_pwd_email">patient2@gksis.com.br</string>
    <string name="submitting">Submitting request..</string>
    <string name="success">Success</string>
    <string name="test_anon_patient">JOHN SMITH</string>
    <string name="test_anon_reporting_phys">Médico Teste</string>
    <string name="check_id_for_description">Check the id for a gist of what the view represents</string>

    <string-array name="image_ids">
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
        <item>@drawable/image_1</item>
        <item>@drawable/image_2</item>
        <item>@drawable/image_3</item>
    </string-array>


</resources>