<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        appcompat:actionViewClass="android.support.v7.widget.SearchView"
        appcompat:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_sort_24dp"
        android:id="@+id/action_sortby"
        android:title="@string/SortBy"
        appcompat:showAsAction="always"/>

    <item
        android:icon="@drawable/ic_person_24dp"
        android:id="@+id/action_logout"
        android:title="@string/logout"
        appcompat:showAsAction="withText"/>

</menu>