<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comment_item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <RelativeLayout
        android:id="@+id/comment_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="6dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp">
    <TextView
        android:id="@+id/gs_exam_comment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/username"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/gs_exam_comment_time_posted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_literal"
        android:layout_alignBaseline="@+id/gs_exam_comment_username"
        android:layout_alignBottom="@+id/gs_exam_comment_username"
        android:layout_alignParentEnd="true"
        android:textStyle="italic"
        android:textSize="10dp" />
    </RelativeLayout>
    <TextView
        android:id="@+id/gs_exam_comment_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/comment_header_layout"
        android:text="@string/comment_example"
        android:paddingLeft="12dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingRight="10dp"
        android:textSize="12dp"
        android:textAppearance="@android:style/TextAppearance.Material.Body1" />

</RelativeLayout>