<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/patient_button"
        android:clickable="true">

        <TextView
            android:id="@+id/radio_patient"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/radio_icon_patient"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/sort_icon"

            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:id="@+id/identification_button"
        android:clickable="true">

        <TextView
            android:id="@+id/radio_identification"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/identification"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/radio_icon_identification"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/sort_icon"
            />

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:id="@+id/date_button"
        android:clickable="true">

        <TextView
            android:id="@+id/radio_executionDate"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/executionDate"
            android:checked="false"
            android:textSize="17sp"/>


        <ImageView
            android:id="@+id/radio_icon_executionDate"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:contentDescription="@string/sort_icon"
            />

    </LinearLayout>

</LinearLayout>